--- a/src/App.css
+++ b/src/App.css
@@ -1330,7 +1330,7 @@ body{
 @media only screen and (min-width: 300px) and (max-width: 599px) {
   .header {
     z-index: 999;
-    padding: 5px 10px;
+    padding: 5px 20px;
 
     
   }
@@ -1338,7 +1338,7 @@ body{
     position: absolute;
     right: 0;
     height: 100%;
-    z-index: 1;
+    z-index: 3;
     width: 50%;
     /* background-color: #f4f4f4; */
     top: 44px;
@@ -1372,12 +1372,12 @@ body{
     cursor: pointer;
   }
   .hero {
-    padding: 10px 10px;
-    height: 90vh;
+    padding: 10px 20px;
+    height: 100%;
     
     display: flex;
     flex-direction: column;
-    z-index: -2;
+    /* z-index: -2; */
     position: relative;
   }
   .hero .hero-image-div{
@@ -1385,21 +1385,22 @@ body{
     width: 100%;
     align-items: center;
     padding: 5px 0px;
-    position: absolute;
+    position: relative;
     top: 0px;
 
   }
   .hero .hero-text{
-    position: absolute;
-    bottom: 70px;
-    padding: 5px 10px;
+    position: relative;
+    
+    padding: 5px 20px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     width: 100%;
-    bottom: 20px;
-    
+    /* bottom: 20px; */
+    border-bottom: #064e3014 3px solid;
+    margin-top: 20px;
   }
  
   .hero .hero-text h2{
@@ -1414,12 +1415,16 @@ body{
   .hero .hero-text ul{
     gap: 2px;
     margin-bottom: 10px;
+    display: flex;
+    /* flex-direction: row; */
+    width: 100%;
+    margin-top: 20px;
   }
   .hero .hero-text ul li{
   
     gap:3px;
     
-    
+    width: 100%;
     font-size: .5rem;
     font-weight: 200;
     line-height: 15px;
@@ -1428,10 +1433,11 @@ body{
   
 
   .hero .hero-image-div .hero-image{
-    position: absolute;
-    top: 0;
+    position: relative;
+    /* top: 0; */
     width: 100%;
-    right: 10px;
+    /* right: 10px; */
+    margin-top: -50px;
     
   }
   .hero .hero-image-div .hero-image1{
@@ -1440,121 +1446,46 @@ body{
     top: -20px;
     z-index: 0;
     left: 80px;
+    display: none;
   }
   .hero-explore{
     
   
-    width: 110px;
+    width: 40%;
     font-size: .6rem;
     text-align: center;
     font-weight: 500;
     margin-top: 0px;
+    z-index: 2;
     /* margin-left: -5px; */
   }
   .brief-content {
     width: 100%;
-    height: 100%;
+    height: 10vh;
     margin: 0 auto;
-    position: absolute;
-    z-index: 1000;
-    /* border: 1px solid; */
+    position: relative;
+    z-index: 2;
+    padding: 0px;
+    margin-top: 0;
+    margin-bottom: 0;
   }
   .brief-content p {
-    position: absolute;
-    top: 20%;
-    line-height: 30px;
-    height: 40px;
-    
-    /* margin-left: -300px; */
+    /* position: absolute; */
+    /* top: 20%; */
+    line-height: 20px;
+    height: 100%;
     font-size:.6rem;
     width: 100%;
+    margin: 0;
     
   }
   .miniShow-container {
-    width: 100%;
-    box-sizing: border-box;
-    height: 100%;
+   
+    margin-bottom: 30px;
     
    
   }
-  .miniShow-container .mini-header {
-    padding: 5px;
-    font-size: .7rem;
-    margin-top: 0px;
-  }
-  .miniShow-container .mini-display {
-    
-    gap: 10px;
-    /* width:200px; */
-    padding: 10px 10px;
-    /* margin-bottom: -100px; */
-  }
-  .miniShow-container .mini-section .mini-des {
-    padding: 0px;
-    display: flex;
-    width: 100%;
-    justify-content: center;
-    align-items: center;
-    /* border: 1px solid; */
-    height: 100px;
-    bottom: 0;
-  }
-  .miniShow-container .mini-section .mini-des .des-folder{
-    padding: 0;
-    margin-left: -50px;
-    margin-top: 10px;
-  }
-  .miniShow-container .mini-section .mini-des h3{
-      font-size: .8rem;
-      padding: 0px 10px;
-  }
-  .miniShow-container .mini-section .mini-des p {
-    text-align: left;
-    margin-top: 15px;
-    
-    /* opacity: 1; */
-    font-size: .6rem;
-    
-    padding-bottom: 10px;
-    padding-left: 10px;
   
-  }
-  .miniShow-container .mini-section .mini-des .price {
-    
-    
-    margin-left: 200px;
-    
-  }
-  .miniShow-container .mini-section{
-
-    width: 270px;
-    /* border: 1px solid; */
-    position: relative;
-    margin-top: 10px;
-    height: 40vh;
-    padding: 0px 5px;
-    /* border: none; */
-    position: relative;
-    
-  }
-  .miniShow-container .mini-display .mini-section .image-div{
-    width: 100%;
-    position: relative;
-    /* border: 1px solid; */
-    height: 100%;
-  }
-  .miniShow-container .mini-display .mini-section .image-div img{
-    position: absolute;
-    width:200px;
-    object-fit: contain;
-    top: -90px;
-    height: 250px;
-    left: 40px;
-    /* left: ; */
-    
-    
-  
-  }
   .homecontact-container {
     display: flex;
     width: 100%;
@@ -1562,6 +1493,7 @@ body{
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    padding: 10px 20px;
   }
   .homecontact-container .homecontact-des {
     width: 100%;
@@ -1621,6 +1553,7 @@ body{
     padding: 10px 10px;
     height: 100%;
     display: flex;
+    gap: 10px;
     flex-direction: column;
     
   }
@@ -1629,8 +1562,8 @@ body{
     /* border-radius: 5px 0px 0px 5px; */
     width: 100%;
     position: relative;
-    height: 50vh;
-    z-index: -2;
+    height: 100%;
+    /* z-index: -2; */
     border-left: 2px solid #0e5c3b;
     border-top-left-radius: 5px;
     border-bottom-left-radius: 5px;
@@ -1639,39 +1572,43 @@ body{
     
     padding: 5px;
     
-  
-    bottom: 50px;
+    position: relative;
+    bottom: 0;
     font-size: 1rem;
   }
   .login-hero img {
     
     object-fit: cover;
     object-position: 100%;
-    margin-top: 0px;
-    margin-left: 10px;
+    margin-top: -50px;
+    margin-left: 0px;
+    width: 100%;
   }
   .login-form {
     width: 100%;
-  z-index: -2;
+  /* z-index: -2; */
+  padding-bottom: 20px;
+  padding-top: 20px;
+  border-radius: 5px;
   }
   .login-form-form {
     
     width: 90%;
-    height: 50vh;
+    height: 100%;
     
   }
   .register-container label {
     
     font-weight: 600;
-    font-size: .7rem;
+    font-size: .8rem;
   }
   .login-form-form input {
     
-    padding: 5px;
+    padding: 10px;
   
   }
   .login-form-form button {
-    padding: 6px;
+    padding: 10px;
     margin-top: 25px;
   
     cursor: pointer;
@@ -1684,7 +1621,7 @@ body{
     justify-content: center;
     align-items: center;
     padding: 10px 10px;
-    z-index: -2;
+    z-index: ;
     border-left: 2px solid #0e5c3b;
     border-top-left-radius: 5px;
     border-bottom-left-radius: 5px;
@@ -1729,12 +1666,13 @@ body{
       
     gap: 5px;
     position: absolute;
+    width: 100%;
     
     /* border: 1px solid #f4f4f4; */
   }
   .footer-container .newsletter form {
     padding: 10px;
-    width: 80%;
+    width: 100%;
     margin-left: 0px;
     display: flex;
     flex-direction: column;
@@ -1744,18 +1682,17 @@ body{
   }
   .footer-container .foot {
     
-    font-size: .5rem;
+    font-size: .6rem;
     
   }
   .footer-container .designs p {
     padding: 5px;
-    font-size: .7rem;
+    font-size: .8rem;
   }
   .footer-container .newsletter input {
-    padding: 5px;
+    padding: 10px;
     width: 80%;
-    border-top-right-radius: 0;
-    border-bottom-left-radius: 0;
+    border-radius: 5px;
     border: none;
     
   }
@@ -1764,10 +1701,37 @@ body{
     
   }
   .footer-container .newsletter button {
-    padding: 6px;
+    padding: 10px;
     width: 80px;
     font-size: .6rem;
   }
+  .show-con .mini-display1 .minishow-section {
+    
+    width: 300px;
+    /* border: 1px solid; */
+    height: 200px;
+    position: relative;
+    
+    /* flex: 1 1; */
+    gap: 10px;
+}
+.show-con .mini-display1 .minishow-section .imageshow1 {
+  width: 100%;
+  object-fit: contain;
+  height: 80%;
+  object-position: center;
+  background-size: 100%;
+  margin-left: 0px;
+  margin-top: 0px;
+}
+.show-con .mini-display1 .minishow-section .mini-des {
+ 
+  width: 100%;
+}
+.show-con .mini-display1 .minishow-section .mini-des .price{
+ 
+  
+}
 
 
 }
